--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -26,6 +26,8 @@
   width: 24px;
   height: 24px;
   grid-area: button;
+  border: 1px solid #ffffff;
+  margin: 0;
 }
 
 .profile__add-button {
@@ -35,6 +37,9 @@
   width: 150px;
   height: 50px;
   margin-left: auto;
+  border-width: 2px;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
 }
 
 .profile__title {
