--- a/pages/index.css
+++ b/pages/index.css
@@ -3,10 +3,30 @@
 @import url(../blocks/header.css);
 @import url(../blocks/profile.css);
 @import url(../blocks/logo.css);
-@import url(../blocks/elements.css);
-@import url(../blocks/reservation.css);
-@import url(../blocks/form.css);
-@import url(../blocks/menu.css);
-@import url(../blocks/card.css);
-@import url(../blocks/about.css);
+@import url(../blocks/cards.css);
 @import url(../blocks/footer.css);
+
+@media screen and (max-width: 480px) {
+  .profile {
+    background-color: pink;
+    flex-direction: column;
+  }
+
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
+  }
+
+  .profile__add-button {
+    margin: 0;
+    max-width: 282px;
+    max-height: 50px;
+  }
+}
