--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -57,3 +57,27 @@
   grid-area: description;
   margin: 0;
 }
+
+@media screen and (max-width: 480px) {
+  .profile {
+    flex-direction: column;
+  }
+
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .profile__description {
+    width: 100%;
+    text-align: center;
+  }
+
+  .profile__add-button {
+    margin: 0;
+    max-width: 282px;
+    max-height: 50px;
+  }
+}
