hide card overflow to show radius and position profile elements

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -17,6 +17,8 @@
   display: grid;
   grid-template-areas: "title button" "description description";
   grid-template-columns: minmax(auto, 373px) auto;
+  align-content: center;
+  align-items: baseline;
 }
 
 .profile__edit-button {
