--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,3 +1,11 @@
 .header {
   margin-top: 45px;
+  opacity: 0.7;
+  border-bottom: 1px solid #545454;
+}
+
+.logo {
+  width: 173px;
+  height: 33px;
+  padding-bottom: 41px;
 }
