--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -54,3 +54,9 @@
   white-space: nowrap;
   overflow: hidden;
 }
+
+@media screen and (max-width: 480px) {
+  .card__list {
+    justify-content: center;
+  }
+}
