--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,8 +1,11 @@
 .footer {
+  font-family: "Inter", Arial, sans-serif;
   display: flex;
 }
 
 .footer__copyright {
+  size: 18px;
+  line-height: 21.78px;
   color: #545454;
   margin-top: 67px;
   margin-bottom: 60px;
