--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,4 +1,5 @@
 .profile {
+  font-family: "Inter", Arial, sans-serif;
   display: flex;
   align-items: center;
   padding-top: 40px;
@@ -50,6 +51,7 @@
   font-weight: 500;
   grid-area: title;
   margin: 0;
+  padding-bottom: 7px;
 }
 
 .profile__description {
@@ -72,14 +74,22 @@
     justify-content: center;
   }
 
+  .profile__title {
+    font-size: 22px;
+    line-height: 26.63px;
+    margin-right: 15px;
+  }
+
   .profile__description {
     width: 100%;
     text-align: center;
+    margin-bottom: 36px;
   }
 
   .profile__add-button {
     margin: 0;
     max-width: 282px;
     max-height: 50px;
+    width: 100%;
   }
 }
