--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -30,7 +30,7 @@
   height: 24px;
   grid-area: button;
   border: 1px solid #ffffff;
-  margin: 0;
+  margin: 0 0 0 18px;
 }
 
 .profile__add-button {
@@ -77,7 +77,6 @@
   .profile__title {
     font-size: 22px;
     line-height: 26.63px;
-    margin-right: 15px;
   }
 
   .profile__description {
