--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -55,7 +55,19 @@
   overflow: hidden;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 620px) {
+  .card__list {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .card__list {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 919px) {
   .card__list {
     justify-content: center;
   }
