--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -62,7 +62,7 @@
   margin: 0;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 620px) {
   .profile {
     flex-direction: column;
   }
@@ -80,6 +80,7 @@
   }
 
   .profile__description {
+    font-size: 14px;
     width: 100%;
     text-align: center;
     margin-bottom: 36px;
@@ -90,5 +91,15 @@
     max-width: 282px;
     max-height: 50px;
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .profile__title {
+    font-size: 30px;
+  }
+
+  .profile__description {
+    font-size: 16px;
   }
 }
