--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,12 +1,11 @@
 .footer {
   font-family: "Inter", Arial, sans-serif;
   display: flex;
+  padding: 30px 0 36px;
 }
 
 .footer__copyright {
-  size: 18px;
-  line-height: 21.78px;
+  font-size: 18px;
+  line-height: 22px;
   color: #545454;
-  margin-top: 67px;
-  margin-bottom: 60px;
 }
