--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,6 +1,5 @@
 .cards {
   font-family: "Inter", Arial, sans-serif;
-
   margin-top: 30px;
   padding: 15px 0 18px;
 }
@@ -51,13 +50,17 @@
   opacity: 0.5;
 }
 
-.card__title-block {
+.card__title {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin: 0;
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 29px;
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 919px) {
   .card__list {
     justify-content: center;
   }
@@ -69,7 +72,7 @@
   }
 }
 
-@media screen and (max-width: 919px) {
+@media screen and (max-width: 620px) {
   .card__list {
     justify-content: center;
   }
