--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -31,6 +31,7 @@
   grid-area: button;
   border: 1px solid #ffffff;
   margin: 0 0 0 18px;
+  transition: opacity 0.5s linear;
 }
 
 .profile__add-button {
@@ -43,6 +44,11 @@
   border-width: 2px;
   border: 2px solid #ffffff;
   border-radius: 2px;
+  transition: opacity 0.5s linear;
+}
+
+.profile__buttons-active:hover {
+  opacity: 0.5;
 }
 
 .profile__title {
@@ -62,7 +68,32 @@
   margin: 0;
 }
 
-@media screen and (max-width: 348px) {
+@media screen and (max-width: 770px) {
+  .profile__title {
+    font-size: 30px;
+  }
+
+  .profile__description {
+    font-size: 16px;
+  }
+
+  .profile__info {
+    grid-template-columns: auto;
+  }
+}
+
+@media screen and (max-width: 674px) {
+  .profile__title {
+    font-size: 27px;
+  }
+
+  .profile__info {
+    grid-template-columns: auto;
+  }
+
+  .profile__add-button {
+    width: 100px;
+  }
 }
 
 @media screen and (max-width: 620px) {
@@ -85,6 +116,7 @@
   .profile__title {
     font-size: 22px;
     line-height: 26.63px;
+    max-width: 238px;
   }
 
   .profile__description {
@@ -99,33 +131,5 @@
     max-width: 282px;
     max-height: 50px;
     width: 100%;
-  }
-}
-
-@media screen and (max-width: 674px) {
-  .profile__title {
-    font-size: 22px;
-  }
-
-  .profile__info {
-    grid-template-columns: auto;
-  }
-
-  .profile__add-button {
-    width: 100px;
-  }
-}
-
-@media screen and (max-width: 770px) {
-  .profile__title {
-    font-size: 30px;
-  }
-
-  .profile__description {
-    font-size: 16px;
-  }
-
-  .profile__info {
-    grid-template-columns: auto;
   }
 }
