--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -62,6 +62,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 420px;
 }
 
 .profile__description {
@@ -73,15 +74,20 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  /*above three create ellipsis when word is too long*/
+  max-width: 400px;
+  /*max-width to control how much text will be displayed*/
 }
 
 @media screen and (max-width: 770px) {
   .profile__title {
     font-size: 30px;
+    max-width: 290px;
   }
 
   .profile__description {
     font-size: 16px;
+    max-width: 300px;
   }
 
   .profile__info {
@@ -92,6 +98,11 @@
 @media screen and (max-width: 674px) {
   .profile__title {
     font-size: 27px;
+    max-width: 270px;
+  }
+
+  .profile__description {
+    max-width: 270px;
   }
 
   .profile__info {
@@ -123,7 +134,7 @@
   .profile__title {
     font-size: 22px;
     line-height: 26.63px;
-    max-width: 238px;
+    max-width: 220px;
   }
 
   .profile__description {
@@ -131,6 +142,7 @@
     width: 100%;
     text-align: center;
     margin-bottom: 36px;
+    max-width: 390px;
   }
 
   .profile__add-button {
