--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -10,3 +10,11 @@
   color: #545454;
   margin: 0;
 }
+
+@media screen and (max-width: 620px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 14px;
+    padding-left: 19px;
+  }
+}
