--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -7,9 +7,16 @@
   z-index: 999;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
-  /*THIS WOULD ALSO WORK TO CENTER
+  /* display: none; */
+  padding: 0 19px;
+  /*
+  THIS WOULD ALSO WORK TO CENTER INSTEAD OF MARGIN AUTO ON CONTAINER
    align-items: center;
   justify-content: center; */
+}
+
+.modal__opened {
+  display: flex;
 }
 
 .modal__container {
@@ -18,6 +25,7 @@
   margin: auto;
   padding: 36px;
   border-radius: 10px;
+  width: 358px;
 }
 
 .modal__close {
@@ -30,14 +38,58 @@
   height: 40px;
   top: -45px;
   right: -45px;
+  transition: opacity 0.5s linear;
   /*
-  Another way shown in video so the position isn't dependent on the w & h
+  Another way to position button shown in video so the position isn't dependent on the w & h
   bottom: calc(100% + 5px);
   left: calc(100% + 5px);
   */
-  background-color: black;
+}
+
+.modal__close:hover {
+  opacity: 0.6;
+  cursor: pointer;
 }
 
 .modal__heading {
-  color: black;
+  color: #000;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 900;
+  width: 100%;
+  height: 23px;
+  margin: 0;
+}
+
+.modal__input {
+  color: #000;
+  font-family: Inter;
+  font-size: 14px;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.2);
+  display: block;
+  padding-bottom: 13px;
+  width: 100%;
+  margin-top: 30px;
+}
+
+.modal__save {
+  color: #fff;
+  border-radius: 2px;
+  background: #000;
+  width: 100%;
+  height: 50px;
+  margin-top: 48px;
+  font-family: Inter;
+  font-size: 18px;
+  border-style: none;
+  transition: opacity 0.5s linear;
+  cursor: pointer;
+}
+
+.modal__save:hover {
+  opacity: 0.8;
+  cursor: pointer;
 }
