--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -81,6 +81,7 @@
   background: #000;
   width: 100%;
   height: 50px;
+  padding: 0;
   margin-top: 48px;
   font-family: Inter;
   font-size: 18px;
@@ -92,4 +93,27 @@
 .modal__save:hover {
   opacity: 0.8;
   cursor: pointer;
+}
+
+@media screen and (max-width: 620px) {
+  .modal__container {
+    width: 282px;
+    padding: 25px 22px;
+  }
+
+  .modal__close {
+    top: -40px;
+    right: 0;
+    width: 26px;
+    height: 26px;
+  }
+
+  .modal__heading {
+    font-size: 18px;
+    margin-bottom: 75px;
+  }
+
+  .modal__save {
+    font-size: 14px;
+  }
 }
