--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -51,7 +51,7 @@
   cursor: pointer;
 }
 
-.modal__heading {
+.modal__title {
   color: #000;
   font-family: Inter;
   font-size: 24px;
@@ -87,7 +87,6 @@
   font-size: 18px;
   border-style: none;
   transition: opacity 0.5s linear;
-  cursor: pointer;
 }
 
 .modal__save:hover {
